# personal-finance-assistant-poc

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/: context_builder.py  eval.py  formatter.py  main.py  responder.py  router.py  router_llm.py  schemas.py  teaching.py  tools.py  torch_router.py  tracing.py
backend/artifacts/model_bundle_v1/: manifest.json
backend/artifacts/model_bundle_v1/intent_router/: intent_router.pt  intent_router_config.json  intent_router_labels.json  intent_router_vocab.json
backend/artifacts/model_bundle_v1/prompts/: response_system.txt  response_user.txt
backend/data/: account.json  activity.json  performance.json  positions.json  quotes.json  transfers.json  user_master.json
backend/data/facts/: etf_basics.md  rebalancing.md  roth_ira.md
frontend/: app.js  index.html  styles.css
ml/: intent_templates.json  intent_test.jsonl  intent_train.jsonl  intent_val.jsonl
prompts/: template.md
scripts/: e2e_smoke.py  generate_intent_dataset.py  generate_tool_json.py  s3_sync.py  train_intent_router.py
specs/: README.md  Systems.md  Tracing.md  api-layer.md  eval.md  formatter.md  frontend.md  intent-router.md  ml-pipeline.md  teaching.md  tool-layer.md
