[project]
name = "personal-finance-assistant-poc"
version = "0.1.0"
description = "Personal Finance Assistant demo (simulated data)"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.35.0",
  "tiktoken>=0.7.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
ml = []

[tool.uv]
package = false
